Thu Apr  4 16:29:07 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * examples/Connection/non_blocking/CPP-acceptor.{h,cpp},
          examples/Connection/non_blocking/CPP-connector.{h,cpp}: Replaced
          the use of macros with actual traits since they should be
          available on all C++ compilers we support now.

Thu Apr  4 18:41:36 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/ace.dsc:
        * debian/debian.changelog:
        * debian/debian.control:
          Updated for new release, thanks to Michael Ganz <michael_ganz at t-online dot de>
          for reporting this

Wed Apr  3 13:41:19 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * tests/Manual_Event_Test.cpp:

          Corrected time value to actually be 200 msec as noted in the comment.

Wed Apr  3 08:13:00 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
        * tests/run_test.pl:
          Set some additional variables that can be used with coverity

Tue Apr  2 09:07:13 UTC 2013  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_stdio.h:
          Fix missing intptr_t declaration on QNX.

Sat Mar 30 18:11:06 UTC 2013  Martin Corino  <mcorino@remedy.nl>

        * examples/C++NPv1/Reactive_Logging_Server_Ex.h:
          Fixed truncating cast error.

Sat Mar 30 09:44:50 UTC 2013  Martin Corino  <mcorino@remedy.nl>

        * ace/config-win32-mingw64.h:
          Minor comment update.

Sat Mar 30 09:30:10 UTC 2013  Martin Corino  <mcorino@remedy.nl>

        * include/makeinclude/platform_mingw32.GNU:
          Added support for latest GCC from MinGW64.

        * ace/config-win32.h:
        * ace/config-win32-mingw.h:
          Split support for MinGW64 variants of MinGW compilers
          into separate files because of tricky differences between
          MinGW32 and MinGW64 APIs.

        * ace/config-win32-mingw64.h:
          Added separate support file for MinGW64 compilers (both